--- a/wally.toml
+++ b/wally.toml
@@ -1,35 +1,7 @@
 [package]
-name = "ahd/ahd-engine"
+name = "rbx-Teleporter"
 version = "0.1.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependencies]
-knit = "sleitnick/knit@1.4.7"
-rodux = "roblox/rodux@3.0.0"
-janitor = "howmanysmall/janitor@1.14.1"
-promise = "evaera/promise@4.0.0"
-roact = "roblox/roact@1.4.2"
-component = "sleitnick/component@2.4.6"
-Comm = "sleitnick/comm@0.3.0"
-Concur = "sleitnick/concur@0.1.0"
-Loader = "sleitnick/loader@1.0.2"
-Option = "sleitnick/option@1.0.3"
-PID = "sleitnick/pid@1.0.1"
-Signal = "sleitnick/signal@1.2.0"
-Symbol = "sleitnick/symbol@2.0.0"
-TableUtil = "sleitnick/table-util@1.1.4"	
-TaskQueue = "sleitnick/task-queue@0.1.0"
-Timer = "sleitnick/timer@1.1.1"
-Trove = "sleitnick/trove@0.4.1"
-WaitFor = "sleitnick/wait-for@0.2.1"
-Streamable = "sleitnick/streamable@1.2.3"	
-Silo = "sleitnick/silo@0.1.0"
-Shake = "sleitnick/shake@0.1.5"
-Ser = "sleitnick/ser@1.0.4"
-Log = "sleitnick/log@0.1.0"
-Input = "sleitnick/input@2.1.0"
-EnumList = "sleitnick/enum-list@2.0.0"
-spring = "brittonfischer/spring@0.1.0"
-roact-rodux = "roblox/roact-rodux@0.3.0"
-cmdr = "evaera/cmdr@1.9.0"
